--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -1,33 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item android:drawable="@android:color/white" />
 
-    <!-- <item>
-
-        <bitmap
-
-            android:gravity="center"
-
-            android:src="@mipmap/ic_launcher" />
-
-    </item> -->
-
-</layer-list>
-
-
-
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--&lt;!&ndash; Modify this file to customize your launch splash screen &ndash;&gt;-->
-<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--    <item android:drawable="?android:colorBackground" />-->
-
-<!--    &lt;!&ndash; You can insert your own image assets here &ndash;&gt;-->
-<!--    &lt;!&ndash; <item>-->
+    <!-- You can insert your own image assets here -->
+<!--    <item>-->
 <!--        <bitmap-->
 <!--            android:gravity="center"-->
-<!--            android:src="@mipmap/ic_launcher" />-->
-<!--    </item> &ndash;&gt;-->
-<!--</layer-list>-->
+<!--            android:src="@mipmap/logo" />-->
+<!--    </item>-->
+</layer-list>
